Fix z-index for sticky elements and dropdown menus

--- a/src/main/resources/static/css/common.scss
+++ b/src/main/resources/static/css/common.scss
@@ -330,12 +330,17 @@ hr {
     background: $white;
 }
 
-/* dropdown menus should appear above sticky elements, I have frankly no idea why Bootstrap do that */
-.dropdown-menu {
+/* sticky elements should slide under the sticky banner */
+#staging-banner {
     z-index: $zindex-sticky + 1;
 }
 
 /* jQuery UI autocomplete widget should appear above the sticky top bar */
 .ui-autocomplete {
-    z-index: $zindex-sticky + 1;
+    z-index: $zindex-sticky + 2;
+}
+
+/* dropdown menus should appear above sticky elements, I have frankly no idea why Bootstrap do that */
+.dropdown-menu {
+    z-index: $zindex-sticky + 2;
 }
